# open-zread

./: .env.example  .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml  settings.json  settings.json.example  settings.py
.code_deep_research/runs/: index.json  test_llm_order.json
agent/: react_agent.py
base/: types.py
log/: __init__.py  logger.py
monitor/: config_manager.py  dashboard.py  events.py
monitor/templates/: config.html  monitor.html  trigger.html
pipeline/: __init__.py  aggregator.py  decomposer.py  explorer.py  llm_filter.py  researcher.py  run.py  scanner.py  scorer.py  types.py  utils.py
prompt/: langfuse_prompt.py  langfuse_prompt_init.py  pipeline_prompts.py  pipeline_prompts_backup.py  react_prompts.py
provider/: adaptor.py  base.py  deepseek_base.py  deepseek_llm.py  llm.py  llm_adaptor.py  llm_base.py  llm_test.py
provider/anthropic/: anthropic_adaptor.py  deepseek_api.py
provider/anthropic_provider/: deepseek_anthropic_api.py
provider/api/: __init__.py  anthropic_api.py  openai_api.py
provider/openai/: deepseek_api.py  openai_adaptor.py
test/: llm_test.py
tool/: fs_tool.py  test_tool.py
util/: langfuse.py  utils.py
