[project]
name = "codedeepresearch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.89.0",
    "dotenv>=0.9.9",
    "langfuse>=4.5.0",
    "openai>=2.30.0",
    "pathspec>=0.12.0",
    "pypinyin>=0.55.0",
]
